<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto" tools:ignore="MissingTranslation">
    <string name="app_name">XY影视</string>
    <string name="back">Back</string>
    <string name="error_live_unsupported">Live TV is not supported in this version</string>
    <string name="preview_loading">Loading preview</string>
    <string name="vod_last">Last seen <xliff:g name="name">%s</xliff:g></string>
    <string name="download_flag">Offline</string>
    <string name="download_channel">Offline cache</string>
    <string name="download_title">Caching</string>
    <string name="download_pending">Preparing…</string>
    <string name="download_queued"><xliff:g name="count">%s</xliff:g> queued</string>
    <string name="download_running_title">Caching <xliff:g name="count">%s</xliff:g> episodes</string>
    <string name="live_pass">Pass</string>
    <string name="live_refresh">Refresh</string>
    <string name="live_line">Line <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_title"><xliff:g name="title">%s</xliff:g> : <xliff:g name="subtitle">%s</xliff:g></string>
    <string name="detail_site">Site: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_year">Year: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_area">Area: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_type">Type: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_director">Director: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_actor">Actor: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_content">Summary: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_desc">Summary</string>
    <string name="keep">Keep</string>
    <string name="keep_add">Added</string>
    <string name="keep_del">Removed</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_op">OP</string>
    <string name="play_ed">ED</string>
    <string name="play_exo">EXO</string>
    <string name="play_next">Next</string>
    <string name="play_prev">Prev</string>
    <string name="play_loop">Loop</string>
    <string name="play_timer">Timer</string>
    <string name="play_change">Change</string>
    <string name="play_forward">→</string>
    <string name="play_backward">←</string>
    <string name="play_invert">Invert</string>
    <string name="play_across">Across</string>
    <string name="play_reverse">Reverse</string>
    <string name="play_track_text">Text</string>
    <string name="play_track_audio">Audio</string>
    <string name="play_track_video">Quality</string>
    <string name="track_auto">Automatic (recommended)</string>
    <string name="play_forward_hint">Normal play switched</string>
    <string name="play_backward_hint">Reverse play switched</string>
    <string name="play_now">Playing: <xliff:g name="name">%s</xliff:g></string>
    <string name="play_ready">Ready to play: <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_parse">Switching parse to <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_flag">Switching flag to <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_site">Switching site to <xliff:g name="name">%s</xliff:g></string>
    <string name="danmaku">Danmaku</string>
    <string name="danmaku_select">Select danmaku</string>
    <string name="parse">Parse</string>
    <string name="parse_god">Super</string>
    <string name="parse_from">Parse from: <xliff:g name="name">%s</xliff:g></string>
    <string name="push">Push</string>
    <string name="push_image" translatable="false">data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAYABgAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsNDhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCADwAPADASIAAhEBAxEB/8QAHwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIhMUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXGx8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAVYnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD9U6KKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACvN7bxhffFCaRPB+oWZ8KSQX1hd65C7reWd/GwRPKjZdrAHLZPB4OcY3aPxe1j+z/CiWMeo6lo95rN3DpdpqOlWn2ma2mkJ2vt/u/KQT2zXXafafYbGGAyNO6KA8zKqtI38TkKAMsck4AGSafmI42H4S2T7Z7/AFjWNQ1JvDx8OT3rXjI00JOWmKrwJicnzBzzVO78L+JfAdi174a1C88RwaZoK6fZeGb6WNftdyjArPJdPzvK5B6A8dMV6PRRcLGL4a8VWHiaK7S1u7Wa+sJRa6hbWtwJvslwFDPEzDHK7sdB0+orarloPDOo6f47bUtPudPsfD9xbOb7TorBRPdXhYYnaYEHIQbec5/IjqaACiiikMKKimuIrdQZZFjBzjccZwCTj8AT+FcVbfFrTNdl0dPDdpeeI4dYtbq4sdSs4j9g3QEqUln/AOWe5xtBKkZpgd1UX2iIXAg81PPKlxFuG4qCATj0yRz71wVjp/jnxZb2E+sXMPhW0vNImttS0izcS3NvdOSFlhuVPBVeRjPP5i/ovw98PeC5bHXLqV7vWNN0lNJfxDq0+65ktVbdiV+FJLcliM5oEdnRXiev/tWeG21R9G8D6bqPxI11Tg2+gRFreM88yXB+RRx1G6vmb9ov9or4iaes+jar4lsvDmqS5RvDXhKXzbi2BGALq852tkn5Isk4525BNqDZLmkfY/xI+O3gT4Sqn/CUeIrWwuHIC2ke6a4Oe/lICwHuRj3rvq/NT4Xfs1apF8XvhtbeLA41zWJn1++0uYkvZ2MBDJ5+cnfM4K7eq4AJ3MQn6V0pRUbWCMnLcKKKKgsKKKKACiiigAooooAKKKKACiiigAooooA4T4xag2h+G7HW21bVdLtdK1O2u7mPR7X7RLex79n2ZkHOx2dckcjFd0DkA0yaLzoZI9zJvUruQ4YZHUHsa8w03xO3wa06503xXPeDwpo9rB5fjLW75Jpb6eWVgY2RBuypKjOOnX1L3Fsep0VV/tSz3zobuAPAVWVTIAYywyoYdiQRjPrXOeJvil4d8K2eoTz3v219PuILW7ttOQ3M0EkxAjDomSuc55xxSGdbSEgdTiuDvtY8d61caja6Potjof2DVoI0vdYmM0WoWOA0rxLH80b/AMI3gjrz6DfCW11a4d/Eeq3/AIiSHXl17TY7iUxf2fIgxHGhjILIvXaxIJ5INMRcuPiv4eFzp0NjcS62LzVW0Yy6TGbmO3uVXcyzMvCBR1J6d6qaXqHjzxDcaRdzadY+FbW31C5j1HT7qQXct1aqCsLxSJgIWPzEMMjgfXrrPTNP0OK6a0tbXT45pnu7gwxrEHkbl5HwBlj1LHk968s8XftSeDtD1JtG0D7Z468R52jSvDUJumBzj55B8ij15JGDxTWuyFtudP4d+EemaU/h+81W+1DxPrmhSXUljrGq3Ba4j+0Z8xcrtDLtO0BgcAYFTeL/AIjeB/g3o0Z1vVtN8O2aL+5tFwrMOeI4UG49/uivL7yL4y/Ej59Y1bT/AIReH5RkWmnkXurOvXBk+4h6cryOeKs+EPhD4D+H94dQ0/Rn13XmO59e8RSG8u2b+8C3Cn3UCnp1YteiGN8bviB8TPk+GvgWSw0uQceJvGGbW3x03xwD55B1wenHIqnH8ALTxMZNX+K/jW+8di0BuJraSb7BotoB8xJRSAQoH3ieg5Fdf8QPiFo/w98PN4g8caubCw5+z2i8z3bgZ2RRjqTxz0Gckgc14Z8QbzUPHHhgeMvjF9o8E/DS2kX+yfAdk5S+1iT7yC4OQctj7vBABPyY3tUb9NBO3XUrfEv9oaN/CF7pvwrji8DfD2wf7Jc+Kre0ET3UxGPs+nQjaXlIGS/BHUmMYZtf9mL9l218L6pY+N/GGl+Tr87CTR9Bum82TT16i4uWIG+4P3ugCHsrYWLofhf8L72+1XTfiH8QtLt9O1C1jC+FfBMMYW10C36q7RgAed0PIypAJAYARegeOfHLeAfh/wCL/GtzIDPptg7W7Sfda4f5IV+hcov/AAKm5fZiJR+1Iwfgj/xX/wAcvil8QHzJaWlwnhXS3PIEVvhrgqe6tLtYY9TXvtea/s5eA3+HPwX8L6POpW/NqLu8LcsbiYmWQMe5Bfb/AMBFelVnLcuOwUUUVJQUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAVFc2sN5C8NxEk8LjDRyKGVvqDUtFAHGa38HfBviKLXY9Q0OG4XXJoZ9R/eSIbiSH/AFTMVYEFe2MdBXSWeg6bpupahqFpp9tbX+oMjXl1DCqy3BRdqGRgMttXgZ6CvOvHH7SngfwXfHS476XxJ4hJ2ponh+I3l0zehCfKp6feI61yd1q3xn+JibkTTvhB4ek4868K32rSL/sp9yM4zwfmGRV2fUm66HsPjDx54d+H+mtqHiPWrLRrQdJLuYIW9lHVj7AE15G37Q/iX4ifuvhT4Fu9atW4/wCEi8QBrHTR/tKD88o6cDB5qDw78FfA3hfVP7Xu7S68c+JDy+teKJjdPu9URvlUZJxgAj1rubzV7q+ULJKRGOBGnyqPbApaINWec3nwZv8AxlJ5/wAVvHl94rXO4+HNDJstMX/ZbaQ0g9yQeTXd6Db6Z4N0saZ4X0ex8O6eP+WNjCqFvdmxlj7nn3ptWLWza4jlmd0t7WFTJNczMFjiUDJZmPAAAJpXbHZIYqzXk4UB5pXP1JrjfiB8XLPwBrUHhXw9ph8b/Eu8GLXQ7RgYrQkcSXL5wigHcQSOOSVB31zuofFHXfixeXvhz4RSjS/D0BMOs/Ea+iIhhAALpaA43uAcbvcEbRtkq/oz+Av2Z/hze6zEJotMlk/e6tcYfVfEdyckIhODsJz6D7x4+ZjMpKDUXrJ9DSNOVSLmtIrd/p5spTeEdI+C9nJ8WvjZrY8W+OFIFjbp81vaScmO3soTgF85O8gY+98uGdrvgXwLrfivxRbfFT4qW6jxABu8OeE3yYdEiJyskinrOcA8jKkAnDACJvw9+Hus+JPEtt8UvilbKPEIXPh3woR+40OHqrup/wCW3Q8jKkZPzYEfpdxcSXczyyuXkY5JNdlGiqCet5Pd9/8AgHm4rFPFSVo8sF8MVsv82+r6hcXEl3M8srF5GOSTUVFFanIM1bxNB4C8I+JPFlyFaLRdPluVRzgSSBTsT6scL/wIVn/s+2lh8Jfgz4NtfEeow2Ws+IphPI144V7m+uiZRH7vjC4/2a5f47Wp8Taf4A+G0fL+MNbSe/QDOdPtcTTZ9ORGR9DXqXiC4XVPip4Y0O3vtBki0+1m1O90e8t/Mvdn+rt7i3OMRhJAQW9Gx6VfQjqd/RRRUFhRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFYXjz/kR/EX/YOuP/RTVu1hePP+RH8Rf9g64/9FNW7WD483HwN4i2RvK/9nXOI413Mx8puAO5NNbgfB/jX4kWV58A/hN8NZdQaw0u40+PVvEl1Dy0NjHI2yMdi7sPlU9XEQ/ir6Q+DPw1vPGOt6f8RfGGljTBZ262/hTwww/d6LZgAK7L/wA92ULk/wAIAHYBfFf2N/2XJtelsfiN47tWeKIRjR9LuoyN4jUIk8in+EBRsB643dMZ+6K1m0tEYwTerCiiisTYKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKAP/Z</string>
    <string name="setting_vod">Vod</string>
    <string name="setting_live">Live</string>
    <string name="setting_subscription">Subscription</string>
    <string name="setting_source">Source Management</string>
    <string name="setting_app">App Settings</string>
    <string name="setting_network">Network</string>
    <string name="setting_data">Data Management</string>
    <string name="setting_player">Player setting</string>
    <string name="setting_incognito">Incognito mode</string>
    <string name="setting_live_tab_visible">Hide Live Tab</string>
    <string name="setting_quality">Image quality</string>
    <string name="setting_size">Image size</string>
    <string name="setting_doh">DoH</string>
    <string name="setting_proxy">Proxy</string>
    <string name="setting_cache">缓存</string>
    <string name="setting_auto_clean">Auto Clean Cache</string>
    <string name="setting_cache_threshold">Cache Threshold</string>
    <string name="setting_backup">备份</string>
    <string name="setting_restore">恢复</string>
    <string name="setting_version">版本</string>
    <string name="setting_choose">Choose</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_title">Settings</string>
    <string name="setting_section_sources">Content Sources</string>
    <string name="setting_section_appearance">Appearance &amp; Home</string>
    <string name="setting_section_playback">Playback &amp; Gestures</string>
    <string name="setting_operation">Operation settings</string>
    <string name="setting_laboratory">Laboratory</string>
    <string name="laboratory_liquid_glass_navigation">Liquid glass bottom bar</string>
    <string name="laboratory_liquid_glass_navigation_summary">Floating capsule with full refraction on Android 13+ and a translucent fallback on older systems</string>
    <string name="player_gesture_double_tap_play">Double tap to play or pause</string>
    <string name="player_gesture_double_tap_seek">Double tap sides to rewind or fast-forward</string>
    <string name="player_gesture_seek_seconds">Rewind / fast-forward step (sec)</string>
    <string name="player_gesture_brightness">Swipe left side for brightness</string>
    <string name="player_gesture_volume">Swipe right side for volume</string>
    <string name="player_gesture_progress">Swipe horizontally to seek</string>
    <string name="player_gesture_episode_port">Swipe vertically to change episode (portrait)</string>
    <string name="player_gesture_episode_land">Swipe vertically to change episode (landscape)</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_paste">Click to paste</string>
    <string name="dialog_config_hint">Please enter the config…</string>
    <string name="dialog_config_name">Please enter the name…</string>
    <string name="crash_restart">重启应用</string>
    <string name="crash_copy">复制报错信息</string>
    <string name="crash_title">应用崩溃了</string>
</resources>